WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
229532
REGRESSION (
r281516
): [AppleSilicon WK2] fast/loader/reload-zero-byte-plugin.html is timing out
https://bugs.webkit.org/show_bug.cgi?id=229532
Summary
REGRESSION (r281516): [AppleSilicon WK2] fast/loader/reload-zero-byte-plugin....
Ryan Haddad
Reported
2021-08-25 19:45:50 PDT
fast/loader/reload-zero-byte-plugin.html has started consistently timing out with no output on Big Sur WK2 bots
https://results.webkit.org/?suite=layout-tests&test=fast%2Floader%2Freload-zero-byte-plugin.html
Attachments
sample from bot
(95.72 KB, text/plain)
2021-08-25 19:51 PDT
,
Ryan Haddad
no flags
Details
WIP patch
(1.75 KB, patch)
2021-08-25 20:20 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
WIP patch
(2.37 KB, patch)
2021-08-26 07:38 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Ryan Haddad
Comment 1
2021-08-25 19:51:18 PDT
Created
attachment 436458
[details]
sample from bot
Radar WebKit Bug Importer
Comment 2
2021-08-25 19:51:46 PDT
<
rdar://problem/82370692
>
Ryan Haddad
Comment 3
2021-08-25 19:55:27 PDT
I cannot reproduce this with a build of
r281515
, but I can with
r281516
.
Ryan Haddad
Comment 4
2021-08-25 20:02:37 PDT
This is only occurring on Apple Silicon bots, and my machine is also an AS one.
Chris Dumez
Comment 5
2021-08-25 20:07:37 PDT
Committed
r281611
(
240967@main
): <
https://commits.webkit.org/240967@main
>
Chris Dumez
Comment 6
2021-08-25 20:07:58 PDT
Reopening since I merely skipped the test for now.
Chris Dumez
Comment 7
2021-08-25 20:20:35 PDT
Created
attachment 436462
[details]
WIP patch Patch for EWS since I don't have an Apple Silicon device handy.
Ryan Haddad
Comment 8
2021-08-25 21:27:28 PDT
(In reply to Chris Dumez from
comment #7
)
> Created
attachment 436462
[details]
> WIP patch > > Patch for EWS since I don't have an Apple Silicon device handy.
This did not resolve the issue for me locally.
Chris Dumez
Comment 9
2021-08-26 07:27:03 PDT
(In reply to Ryan Haddad from
comment #8
)
> (In reply to Chris Dumez from
comment #7
) > > Created
attachment 436462
[details]
> > WIP patch > > > > Patch for EWS since I don't have an Apple Silicon device handy. > This did not resolve the issue for me locally.
Thanks for checking. Mac-AS-debug-wk2 is green so it seems I cannot rely on EWS after all?
Chris Dumez
Comment 10
2021-08-26 07:35:13 PDT
I built with UBSan and ran this test but there was nothing interesting in the output.
Chris Dumez
Comment 11
2021-08-26 07:38:05 PDT
Created
attachment 436509
[details]
WIP patch
Ryan Haddad
Comment 12
2021-08-26 07:45:53 PDT
(In reply to Chris Dumez from
comment #9
)
> (In reply to Ryan Haddad from
comment #8
) > > (In reply to Chris Dumez from
comment #7
) > > > Created
attachment 436462
[details]
> > > WIP patch > > > > > > Patch for EWS since I don't have an Apple Silicon device handy. > > This did not resolve the issue for me locally. > > Thanks for checking. Mac-AS-debug-wk2 is green so it seems I cannot rely on > EWS after all?
Hm, I’ll try another build..
Chris Dumez
Comment 13
2021-08-26 07:46:59 PDT
(In reply to Ryan Haddad from
comment #12
)
> (In reply to Chris Dumez from
comment #9
) > > (In reply to Ryan Haddad from
comment #8
) > > > (In reply to Chris Dumez from
comment #7
) > > > > Created
attachment 436462
[details]
> > > > WIP patch > > > > > > > > Patch for EWS since I don't have an Apple Silicon device handy. > > > This did not resolve the issue for me locally. > > > > Thanks for checking. Mac-AS-debug-wk2 is green so it seems I cannot rely on > > EWS after all? > Hm, I’ll try another build..
Would you be able to provide me with the output of: log stream --system | grep ProcessSwapping When you run the test? I am curious if process swapping is actually happening for some reason (it shouldn't in this test).
Chris Dumez
Comment 14
2021-08-26 10:04:16 PDT
Committed
r281632
(
240988@main
): <
https://commits.webkit.org/240988@main
>
Chris Dumez
Comment 15
2021-08-26 12:29:21 PDT
"Big Sur E wk2 Release on Macmini9,1 with arm64" is green again. Still waiting on "Big Sur E wk2 Debug on Macmini9,1 with arm64" to process the patch but odds are the partial revert worked.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug